# gcp-ecr-syncer

./: Dockerfile  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: build-and-push-release.yml
src/: main.py
